--- a/config.yml
+++ b/config.yml
@@ -14,3 +14,20 @@ languages:
     languageName: English
     title: North Cape 2022
     weight: 2
+SectionPagesMenu: "main"
+Paginate: 20 # this is set low (3) for demonstrating with dummy content. Set to a higher number
+googleAnalytics: ""
+enableRobotsTXT: true
+sitemap:
+  changefreq: "monthly"
+  priority: 0.5
+  filename: "sitemap.xml"
+params:
+  text_color: ""
+  author: ""
+  favicon: ""
+  site_logo: ""
+  description: "The last theme you'll ever need. Maybe."
+  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  background_color_class: "bg-black"
+  recent_posts_number: 3
