--- a/config.yml
+++ b/config.yml
@@ -30,4 +30,5 @@ params:
   description: "The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class: "bg-black"
+  featured_image: /monster-render-2.jpg
   recent_posts_number: 3
