--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ baseURL: 'https://noordkaap2022.onrender.com/'
 languageCode: 'nl-nl'
 title: 'Noordkaap 2022'
 theme: "ananke"
-defaultContentLang: nl
+defaultContentLanguage: nl
 languages:
   nl:
     contentDir: content/nl
@@ -27,7 +27,6 @@ params:
   author: ""
   favicon: ""
   site_logo: ""
-  description: "The last theme you'll ever need. Maybe."
   # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class: "bg-black"
   featured_image: /monster-render-2.jpg
