--- a/config.yml
+++ b/config.yml
@@ -1,19 +1,33 @@
 baseURL: 'https://noordkaap2022.onrender.com/'
 languageCode: 'nl-nl'
 title: 'Noordkaap 2022'
-theme: "ananke"
+theme: "hamburg"
 defaultContentLanguage: nl
+defaultContentLanguageInSubdir: true
 languages:
   nl:
     contentDir: content/nl
     languageName: Nederlands
     title: Noordkaap 2022
+    subtitle: Een verslag
     weight: 1
+    menu:
+    -  main:
+        name: "Over"
+        identifier: "over"
+        url: "pages/about"
   en:
     contentDir: content/en
     languageName: English
     title: North Cape 2022
     weight: 2
+    menu:
+    -  main:
+        name: "About"
+        identifier: "about"
+        url: "pages/about"
+    copyright: "&copy; some license"
+
 SectionPagesMenu: "main"
 Paginate: 20 # this is set low (3) for demonstrating with dummy content. Set to a higher number
 googleAnalytics: ""
@@ -23,11 +37,11 @@ sitemap:
   priority: 0.5
   filename: "sitemap.xml"
 params:
-  text_color: ""
-  author: ""
-  favicon: ""
-  site_logo: ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class: "bg-black"
-  featured_image: /monster-render-2.jpg
-  recent_posts_number: 3
+  themecolor: "#hexcolor" # Defines the tab color in Chrome for Android.
+  # To load additional CSS styles
+  customCSS: ['hamburg.css']
+  # Show this very user-friendly and absolutely not annoying GDPR notice at the bottom of the page
+  ShowGDPRNotice: true
+  subtitle: "The great example site of the hugo-hamburg-theme"
+  # Since 0.57.0 there's the concept of "main sections". The files for the section "posts" are in "./content/posts/".
+  mainSections: ["about", "posts"]
