--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://your-site.com"
+baseurl = "https://noordkaap2022.onrender.com"
 defaultContentLanguage = "nl"
 defaultContentLanguageInSubdir = "true"
 title = "Noordkaap 2022"
