--- a/config.toml
+++ b/config.toml
@@ -27,6 +27,10 @@ theme = "hamburg"
                 name = "Over"
                 identifier = "about"
                 url = "pages/about"
+                [[languages.nl.menu.main]]
+                name = "Route"
+                identifier = "route"
+                url = "route/expected-route"
     [languages.en]
         languageCode = "en"
         languageName = "English"
@@ -40,3 +44,7 @@ theme = "hamburg"
                 name = "About"
                 identifier = "about"
                 url = "pages/about"
+            [[languages.en.menu.main]]
+                name = "Route"
+                identifier = "route"
+                url = "route/expected-route"
